--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -1,135 +1,42 @@
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-
 * {
-    border-color: transparent !important;
-}
-
-.titlebar-buttonbox-container{ 
-    display:none 
-}
-
-#tabbrowser-tab .tabbrowser-tab .tab-close-button {
-    display:none !important;
-}
-
-.tab-content {
-    margin: 7px;
-}
-
-#navigator-toolbox[fullscreenShouldAnimate] {
-    transition: 0ms !important;
-}
-
-.tab-background {
-    outline: none !important;
-    box-shadow: none !important;
-    border-radius: 10px !important;
-    margin: 7px !important;
-    margin-left: 5px !important;
-    margin-right: 5px !important;
-    background-color: rgba(25, 28, 28, 0.7) !important;
-}
-
-.titlebar-spacer {
-    display: none;
-}
-
-#page-action-buttons {
-    display: none;
-}
-
-#back-button, #forward-button, #home-button {
-    display: none;
-}
-
-#urlbar-background {
-    border-radius: 10px !important;
-    outline: none !important;
-    box-shadow: none !important;
-    background-color: transparent !important;
-}
-
-#nav-bar-overflow-button {
-    display: none;
-}
-
-#nav-bar {
-    border-radius: 10px; 
-    margin-top: 1px;
-    margin-left: 7px;
-    margin-right: 7px;
-    background-color: rgba(25, 28, 28, 0.7) !important;
-}
-
-#urlbar-container {
-    margin-left: 4px !important;
-}
-
-.urlbarView {
-    display: none !important;
-}
-
-#tracking-protection-icon-container {
-
-}
-
-#browser {
-    background: transparent !important;
-}
-
-#browser * {
-    outline: none !important;
-    box-shadow: none !important;
-    background-color: transparent !important;
-}
-
-browser {
-    margin: 7px;
-    border-radius: 10px !important;
-    outline: none !important;
-    box-shadow: none !important;
-    background-color: rgba(25, 28, 28, 0.7) !important;
-    border: 1px solid rgba(25, 28, 28, 0.7) !important;
-}
-
-#navigator-toolbox {
-    background-color: rgba(25, 28, 28, 0.7) !important;
-    backdrop-filter: blur(10px);
-    border: none !important;
-}
-
-browser,
-.browserContainer,
-.browserStack,
-#tabbrowser-tabpanels {
-    background-color: rgba(25, 28, 28, 0.7) !important;
-}
-
-#sidebar-box,
-#sidebar {
-    background-color: rgba(25, 28, 28, 0.7) !important;
-}
-
-#sidebar,
-#browser,
-#content-deck,
-#sidebar-splitter {
     margin: 0 !important;
     padding: 0 !important;
     border: none !important;
-    min-width: 0 !important;
-    width: auto !important;
-    max-width: 100% !important;
+    border-radius: 0 !important;
+    outline: none !important;
+    font-family: "JetBrainsMono Nerd Font";
+    color: #ebdbb2 !important;
+    background-color: #191c1c !important;
 }
-
-#sidebar-splitter {
+toolbarbutton {
     display: none !important;
 }
 
-#browser {
-    width: 100% !important;
+.tab-label-container {
+    background-color: #2b2b2b !important;
 }
 
-#sidebar-box {
-    width: auto !important;
+.tab-text, .tab-content {
+    font-weight: bold;
+    background-color: #2b2b2b !important;
+}
+
+.urlbar-container {
+    text-align: center !important;
+}
+/* Hide elements */
+.urlbar-searchmode-switcher, 
+.tab-close-button, 
+.close-icon {
+    display: none !important;
+}
+
+#back-button, 
+#forward-button, 
+#home-button,
+#tracking-protection-icon-container,
+#identity-box,
+#translations-button,
+#star-button {
+    display: none !important;
 }
